Update define dependency.

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "markdown"
   ],
   "dependencies": {
-    "cli-compiler": "^0.1.18"
+    "cli-compiler": "^0.1.18",
+    "cli-define": "^0.6.4"
   },
   "devDependencies": {
     "chai": "^1.9.1",
