--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "markdown"
   ],
   "dependencies": {
-    "cli-compiler": "^0.1.31"
+    "cli-compiler": "~0.1.32"
   },
   "devDependencies": {
     "chai": "^1.9.1",
